moved all CSS to its file, cleaned code

--- a/contact.html
+++ b/contact.html
@@ -13,58 +13,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="main.css" />
-    <style>
-      .social-icons {
-        display: flex;
-        justify-content: center;
-        gap: 50px; /* Adjust the space between icons */
-        margin-top: 20px;
-      }
-      .contact {
-        text-align: center;
-        font-size: xx-large;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-          sans-serif;
-        margin-top: 150px;
-      }
-
-      .social-icon {
-        color: #fffdfd; /* Default color for icons */
-        font-size: 3em; /* Adjust the size of the icons */
-        transition: color 0.3s;
-      }
-
-      .social-icon:hover {
-        color: #0073b1; /* Color change on hover (e.g., LinkedIn blue) */
-        padding-top: 5px;
-      }
-      /* SOME EDITS TO THE NAVBAR */
-      .navbar-nav .nav-link {
-        margin-right: 15px;
-        margin-top: 20px;
-        font-size: larger;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-      }
-      /*THE BACKGROUND OF THE PAGE */
-      @keyframes gradient {
-        0% {
-          background-position: 0% 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0% 50%;
-        }
-      }
-
-      body {
-        background: linear-gradient(270deg, #180333, #111010, #1b1d3d);
-        background-size: 600% 600%;
-        animation: gradient 20s ease infinite;
-      }
-    </style>
 
     <title>My Website</title>
   </head>
@@ -132,7 +80,7 @@
         >
           <i class="fab fa-github"></i>
         </a>
-        <a href="menu.html" class="social-icon">
+        <a href="contact.html" class="social-icon">
           <i class="fas fa-envelope"></i>
         </a>
         <a
