--- a/projects.html
+++ b/projects.html
@@ -9,43 +9,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('projects', filename='css/main.css') }}"
-    />
-    <style>
-      /* SOME EDITS TO THE NAVBAR */
-      .navbar-nav .nav-link {
-        margin-right: 15px;
-        margin-top: 20px;
-        font-size: larger;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-      }
-      /*THE BACKGROUND OF THE PAGE */
-      @keyframes gradient {
-        0% {
-          background-position: 0% 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0% 50%;
-        }
-      }
-
-      body {
-        background: linear-gradient(270deg, #180333, #111010, #1b1d3d);
-        background-size: 600% 600%;
-        animation: gradient 20s ease infinite;
-      }
-      .card {
-        margin-top: 50px;
-        margin-left: 85px;
-        text-align: center;
-        width: 18rem;
-      }
-    </style>
+    <link rel="stylesheet" href="main.css" />
 
     <title>My Website</title>
   </head>
