--- a/index.html
+++ b/index.html
@@ -8,87 +8,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('projects', filename='css/main.css') }}"
-    />
-    <style>
-      .hidden {
-        display: none;
-      }
-      /* SOME EDITS TO THE NAVBAR */
-      .navbar-nav .nav-link {
-        margin-right: 15px;
-        margin-top: 20px;
-        font-size: larger;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-      }
-      /*THE BACKGROUND OF THE PAGE */
-      @keyframes gradient {
-        0% {
-          background-position: 0% 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0% 50%;
-        }
-      }
-
-      body {
-        background: linear-gradient(270deg, #180333, #111010, #1b1d3d);
-        background-size: 600% 600%;
-        animation: gradient 20s ease infinite;
-      }
-      .hi_msg {
-        text-align: center;
-        color: #ced0db;
-        margin-top: 20px;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-          sans-serif;
-      }
-      .repre_msg {
-        text-align: center;
-        color: #ced0db;
-        margin-top: 13px;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-          sans-serif;
-      }
-      .typewriter {
-        overflow: hidden;
-        font-size: xx-large;
-        border-right: 0.15em solid rgb(15, 4, 39); /* The cursor */
-        white-space: nowrap; /* Keeps the text on a single line */
-        margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-        letter-spacing: 0.1em; /* Adjust as needed */
-        margin-top: 90px;
-        padding: 5px;
-        animation: typing 4.5s steps(30, end),
-          blink-caret 0.55s step-end infinite;
-      }
-
-      @keyframes typing {
-        from {
-          width: 2;
-        }
-        to {
-          width: 100%;
-        }
-      }
-
-      @keyframes blink-caret {
-        from,
-        to {
-          border-color: transparent;
-        }
-        50% {
-          border-color: rgb(21, 6, 49);
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="main.css" />
 
     <title>My Website</title>
   </head>
