--- a/index.html
+++ b/index.html
@@ -13,51 +13,17 @@
     <title>My Website</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul style="margin-right: 70px" class="navbar-nav , ms-auto">
-            <li class="nav-item">
-              <a
-                style="color: aliceblue"
-                class="nav-link active"
-                href="index.html"
-                >HOME</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                style="color: aliceblue"
-                class="nav-link active"
-                id="projects-btn"
-                href="projects.html"
-                >PROJECTS</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                style="color: aliceblue"
-                class="nav-link active"
-                id="contact-btn"
-                href="contact.html"
-                >CONTACT</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="index.html">HOME</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="projects.html">PROJECTS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">CONTACT</a>
+      </li>
+    </ul>
     <div>
       <h3 class="hi_msg typewriter">
         Hi, my name is <strong>Abdulrahman Kharboutli</strong>
