fixed cards on mobile devices

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="main.css" />
 
-    <title>My Website</title>
+    <title>Projects</title>
   </head>
   <body>
     <ul class="nav justify-content-end">
@@ -25,46 +25,52 @@
         <a class="nav-link" href="contact.html">CONTACT</a>
       </li>
     </ul>
-    <div class="card">
-      <img
-        src="https://t3.ftcdn.net/jpg/02/52/12/40/360_F_252124067_aCtp9ZD934RboKmjJzkXiwYDL7XkNjpn.jpg"
-        class="card-img-top"
-        alt="..."
-      />
-      <div class="card-body">
-        <h5 class="card-title">Food recipes platform</h5>
-        <p class="card-text">
-          Developed a web application to store and manage recipes. Tech stack:
-          Python SQLite, APIs, Docker, Github, Flask , JS
-        </p>
-        <a
-          href="https://github.com/BedoKharboutli/recipe-platform"
-          class="btn btn-primary"
-          >See Project</a
-        >
-      </div>
-    </div>
-    <div
-      class="card"
-      style="margin-left: 500px; margin-top: -401px; margin-bottom: 1px"
-    >
-      <img
-        src="https://i.ytimg.com/vi/ofEfimSRpX0/maxresdefault.jpg"
-        class="card-img-top"
-        alt="..."
-      />
-      <div class="card-body">
-        <h5 class="card-title">Snake game</h5>
-        <p class="card-text">
-          This is a simple snake game implemented in JavaScript & HTML/CSS.
-          Snake movement based on user input. <br />
-          Have fun with the game!!!
-        </p>
-        <a
-          href="https://bedokharboutli.github.io/snakegame-JS/"
-          class="btn btn-primary"
-          >Play Game</a
-        >
+
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-4">
+          <div class="card h-100">
+            <img
+              src="https://t3.ftcdn.net/jpg/02/52/12/40/360_F_252124067_aCtp9ZD934RboKmjJzkXiwYDL7XkNjpn.jpg"
+              class="card-img-top"
+              alt="Food recipes platform"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Food recipes platform</h5>
+              <p class="card-text">
+                Developed a web application to store and manage recipes. Tech
+                stack: Python SQLite, APIs, Docker, Github, Flask , JS
+              </p>
+              <a
+                href="https://github.com/BedoKharboutli/recipe-platform"
+                class="btn btn-primary"
+                >See Project</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-4">
+          <div class="card h-100">
+            <img
+              src="https://i.ytimg.com/vi/ofEfimSRpX0/maxresdefault.jpg"
+              class="card-img-top"
+              alt="Snake game"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Snake game</h5>
+              <p class="card-text">
+                This is a simple snake game implemented in JavaScript &
+                HTML/CSS. Snake movement based on user input. <br />
+                Have fun with the game!!!
+              </p>
+              <a
+                href="https://bedokharboutli.github.io/snakegame-JS/"
+                class="btn btn-primary"
+                >Play Game</a
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
