URL to be able to see the project

--- a/projects.html
+++ b/projects.html
@@ -38,11 +38,11 @@
             <div class="card-body">
               <h5 class="card-title">Food recipes platform</h5>
               <p class="card-text">
-                Developed a web application to store and manage recipes. Tech
-                stack: Python SQLite, APIs, Docker, Github, Flask , JS
+                Developed a web application to store and manage food recipes.
+                Tech stack: Python SQLite, APIs, Docker, Bootstrap, Flask , JS
               </p>
               <a
-                href="https://github.com/BedoKharboutli/recipe-platform"
+                href="https://recipe-platform-my2aml003-bedokharboutlis-projects.vercel.app"
                 class="btn btn-primary"
                 >See Project</a
               >
